fixed platform icons on mobile

--- a/style.css
+++ b/style.css
@@ -82,3 +82,8 @@ body, html {
         margin-left: 38%;
     }
 }
+@media (max-width: 450px){
+    .platforms-available{
+        margin-left: 34%;
+    }
+}
